update to shinyproxy 3.0.2, fix #3, PR #4
- updated templates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - ./shinyproxy-logs/server:/log
       - ./shinyproxy-logs/container:/container-logs
       - ./application.yml:/opt/shinyproxy/application.yml
+      # - ./shinyproxy-3.0.2.jar:/opt/shinyproxy/shinyproxy.jar
 
 networks:
   net:
